[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/items/sprites.png" type="Texture" id=1]
[ext_resource path="res://items/Callampitas.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 11.5

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "3",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.75, 7.5 )

[node name="Callampita" type="KinematicBody2D" groups=["consumable"]]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Callampitas" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 5 )
animation = "3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.25, 0.5 )
shape = SubResource( 6 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
